alterar application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=actionfigures
+
+# parametro 1 - usuario do banco
+spring.datasource.username = admin
+
+# parametro 2 - senha do banco
+spring.datasource.password = 12345
+
+#parametro 3 - caminho para gravar os arquivos do banco de dados
+spring.datasource.url = jdbc:h2:file:./actionfigures_db
+
+# parametro 4 - dialeto para o Java conversar com o Banco de Dados
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+# parametro 5 - criar automaticamente a estrutura do banco caso nao exista
+spring.jpa.hibernate.ddl-auto = update
